--- a/base/style/style.css
+++ b/base/style/style.css
@@ -2,75 +2,12 @@
 	padding: 0;
 	margin: 0;
 	border: 0;
+	box-sizing: border-box;
 }
-
-*, *:before, *:after {
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-}
-
-:focus, :active {
-	outline: none;
-}
-
-a:focus, a:active {
-	outline: none;
-}
-
-nav, footer, header, aside {
-	display: block;
-}
-
-html, body {
-	height: 100%;
-	width: 100%;
-	font-size: 100%;
-	line-height: 100%;
-}
-
-input, button, textarea {
-	font-family: inherit;
-}
-
-input::-ms-clear {
-	display: none;
-}
-
-button {
-	cursor: pointer;
-}
-
-button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
-}
-
-a, a:visited {
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: none;
-}
-
-ul li {
-	list-style: none;
-}
-
-img {
-	vertical-align: top;
-}
-
-/*h1, h2, h3, h4, h5, h6 {*/
-/*	font-size: inherit;*/
-/*	font-weight: inherit;*/
-/*}*/
-
-/*-------------------*/
 
 .container {
-	width: 70%;
-	margin: 0 auto;
+	width: 700px;
+	margin: 15px auto;
 }
 
 .block {
@@ -79,12 +16,14 @@ img {
 	border-radius: 5px;
 	background-color: #D3D3D3;
 	margin: 5px 0;
-	padding: 20px;
-	overflow: hidden;
+	padding: 10px;
 }
 
 .top-block {
-	line-height: 28px;
+	display: inline-table;
+	width: 100%;
+	min-height: 250px;
+	line-height: 25px;
 }
 
 .center-block {
@@ -165,14 +104,14 @@ img {
 }
 
 .form-color {
-	width: 200px;
+	width: 205px;
 	display: flex;
 	justify-content: space-between;
 }
 
 .btn-text-color,
 .btn-bg-color {
-	width: 95px;
+	width: 98px;
 	height: 20px;
 	font-size: 12px;
 	background-color: white;
@@ -202,15 +141,9 @@ img {
 	cursor: pointer;
 }
 
-/*.rotate {*/
-/*	transform: rotateZ(180deg);*/
-/*	transition: transform 5s ease;*/
-/*}*/
-
 .color-box {
 	width: 50px;
 	height: 50px;
-	border: black 1px solid;
 }
 
 .color-box:nth-of-type(1) {background-color: blue;}
@@ -223,6 +156,43 @@ img {
 .color-box:nth-of-type(8) {background-color: orange;}
 .color-box:nth-of-type(9) {background-color: purple;}
 
+.first,
+.second {
+	display: none;
+}
+
+.form-list {
+	display: flex;
+	flex-direction: column;
+	margin-top: 10px;
+}
+
+.input-list {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 15px;
+}
+
+.input-list-text {
+	width: 80%;
+	height: 25px;
+	padding-left: 5px;
+	outline: none;
+}
+
+.input-list-text:hover {
+	box-shadow: lightblue 0 0 5px 5px;
+}
+
+.btn-create {
+	width: 60px;
+	height: 20px;
+	font-size: 10px;
+	color: white;
+	background-color: #1C9742;
+	margin-top: 15px;
+}
+
 .bold {
 	font-weight: bold;
 }
@@ -231,18 +201,41 @@ img {
 	font-style: italic ;
 }
 
-.first, .second {
-	display: none;
+h3 {
+	margin-bottom: 25px;
+}
+
+h5 {
+	margin: 18px 0 5px;
+}
+
+ul {
+	list-style: inside;
+}
+
+table {
+	border-collapse: collapse;
 }
 
 .hide {
 	display: flex;
 }
 
+#fontFamily {
+	width: 200px;
+	font-size: 12px;
+	cursor: pointer;
+}
+
+input {
+	cursor: pointer;
+}
+
 select {
 	width: 95px;
 	height: 20px;
 	font-size: 12px;
+	outline: none;
 }
 
 span {
@@ -250,6 +243,46 @@ span {
 	cursor: pointer;
 }
 
+.create-list,
+.create-table {
+	display: none;
+}
+
+.create-table {
+	height: 300px;
+	margin-left: -10px;
+	margin-right: -10px;
+}
+
+.border-table {
+	width: 170px;
+}
+
+.border-table-1 {
+	width: 234px;
+}
+
+.input-table-text {
+	width: 88px;
+	height: 25px;
+	font-size: 12px;
+	padding-left: 5px;
+	outline: none;
+}
+
+.input-table-text:hover {
+	box-shadow: lightblue 0 0 5px 5px;
+}
+
+.span-border {
+	font-size: 12px;
+}
+
+.span-border-left {
+	margin-right: 51px;
+}
+
 .show {
 	display: block;
 }
+
